@@ -9,7 +9,7 @@
   <link rel="shortcut icon"
         href="{{request.static_url('stalker:static/favicon.ico')}}"/>
   <link rel="stylesheet"
-        href="{{request.static_url('stalker:static/css/pylons.css')}}"
+        href="{{request.static_url('stalker:static/css/stalker.css')}}"
         type="text/css" media="screen" charset="utf-8"/>
   <!--[if lte IE 6]>
   <link rel="stylesheet"
@@ -19,37 +19,19 @@
 </head>
 <body>
 <div id="wrap">
-  <div id="top-small">
-    <div class="top-small align-center">
-      <div>
-        <img width="220" height="50" alt="pyramid"
-             src="{{ request.static_url('stalker:static/pyramid-small.png') }}"/>
-      </div>
+  <div id='login_window'>
+    <div id='title'><h3><b>Login To Stalker</b></h3></div>
+    <div id='column1'>
+      login or email<br/>
+      password
     </div>
-  </div>
-  <div id="middle">
-    <div class="middle align-right">
-      <div id="left" class="app-welcome align-left">
-        <b>login</b><br/>
-        <span tal:replace="message"/>
-      </div>
-      <div id="right" class="app-welcome align-right"></div>
-    </div>
-  </div>
-  <div id="bottom">
-    <div class="bottom">
-      <form action="{{url}}" method="post">
-        <input type="hidden" name="came_from" value="{{came_from}}"/>
-        <input type="text" name="login" value="{{login}}"/><br/>
-        <input type="password" name="password" value="{{password}}"/><br/>
-        <input type="submit" name="form.submitted" value="Log In"/>
+    <div id='column2'>
+      <form>
+        <div><input class='indented_input' type='text' name='login_name'><br/></div>
+        <div><input class='indented_input' type='password' name='password'><br/></div>
+        <div id='login_button'><b><input type="submit" value="Login" /></b></div>
       </form>
     </div>
-  </div>
-</div>
-<div id="footer">
-  <div class="footer">
-    &copy; Copyright 2009-2012, Erkan Ozgur Yilmaz
   </div>
 </div>
 </body>
